# InteractiveContentFileFormat

./: .gitignore  FileFormat.sln  FileFormat.vcxproj  FileFormat.vcxproj.filters  FileManager.cpp  FileManager.h  Makefile  README.md  cApp.cpp  cApp.h  cContainer.cpp  cContainer.h  cMain.cpp  cMain.h  cNativeContent.cpp  cNativeContent.h  cRichTextView.cpp  cRichTextView.h  example.ic  example.txt  example_dictionary.ic  example_dictionary2.ic  format.h  log.txt  main.c  new_file.ic  outdated.ic  reader.c  reader.cpp  reader.h  styles.ic
Core/: CustomImageReader.cpp  CustomImageReader.h  FileManager.cpp  FileManager.h  Logger.cpp  Logger.h  WindowManager.cpp  WindowManager.h  reader.cpp  reader.h
Interpreter/: main.js  reader.js
UI/: cApp.cpp  cMain.cpp  cMain.h
UI/Components/: cContainer.cpp  cContainer.h  cStyledPanel.cpp  cStyledPanel.h
UI/Content/: cBitmap.cpp  cBitmap.h  cButton.cpp  cButton.h  cImageView.cpp  cImageView.h  cNativeContent.cpp  cNativeContent.h  cRichTextView.cpp  cRichTextView.h  cWebView.cpp  cWebView.h
Website/: Spec.tex  content.html  index.html  introduction.html  structure.html
Writer/: createIC.py  wikipedia.py
Writer/wikiserver/: WikipediaParser.js  WikipediaUtils.js  index.js  package-lock.json  package.json
notes/: bytes.txt  content.txt  details.txt  outline.txt
src/: CMakeLists.txt  cApp.cpp  cApp.h
src/Core/: CMakeLists.txt  CustomImageReader.cpp  FileManager.cpp  reader.h
src/UI/: CMakeLists.txt
src/UI/Content/: cImageView.h  cWebView.h
